Add stdlib modules and compiler runtime support